public/css/takapic-styles.css
/* ... */
.button.button-white {
    background: #fff;
    color: #333;
    -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
}
.button-white:hover{
    color: white;
    background-color: black
}

button.button-white-no-shadow {
    background: transparent;
    color: #333;
}

button.u {
    text-decoration: underline;
}

button.u:hover {
    text-decoration: none;
}

.bootstrap-select.btn-group,
.bootstrap-select.btn-group > .btn {
    height: 40px;
}

#nav {
    background: #fff;
    position: fixed;
    z-index: 999;
    width: 100%;
    -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
}

#nav-logo {
    display: inline-block;
    margin: 10px 0;
}

#nav-logo > img {
    height: 25px;
}

#nav-menu {
    display: inline-block;
    float: right;
    font-size: 0;
}

#nav-menu > i,
#nav-menu > div > a {
    font-size: 14px;
    cursor: pointer;
}

#nav-menu > i {
    display: none;
    padding: 10px 0 10px 10px;
    margin: 7px 0;
}

#nav-menu > div > a {
    display: inline-block;
    padding: 0 10px;
    margin: 13px 0;
}

#nav-menu > div > a:hover {
    color: #aaa;
    text-decoration: none;
}

#nav-menu > div > a:first-of-type {
    border-left: none;
}

#nav-search {
    float: right;
    margin-top: 10px;
    width: calc(100% - 94px - 35px);
    position: relative;
    display: none;
}

#nav-search > .fa {
    font-size: 16px;
    position: absolute;
    top: 6px;
    left: 8px;
}

#nav-search > input {
    height: 30px;
    font-size: 14px;
    padding: 0 15px 0 30px;
    margin: 0;
}

#footer ul.footer-links {
    width: 50%;
    float: none;
    vertical-align: top;
}

#footer ul.footer-links li {
    font-size: 14px;
}

#footer .bootstrap-select.btn-group {
    display: block;
    width: 100%;
}

#footer-social {
    font-size: 0;
}

#footer-social > a {
    font-size: 24px;
    display: inline-block;
    margin-right: 15px;
}

#promo {
    background: #fff url('../img/takapic-bg.jpeg');
    background-size: 100%;
    background-repeat: no-repeat;
    color: #333;
}

#promo-brand {
    color: #fff;
    margin: 180px 0 200px;
}

#promo-brand > img {
    width: 400px;
    margin-bottom: 40px;
}

#promo-brand > p {
    font-size: 36px;
    font-weight: 300;
    line-height: 50px;
}

#promo-video {
    display: block;
    margin: auto;
    width: 72vw;
    height: 40.5vw;
    max-width: 100%;
}

#promo-soon {
    text-align: center;
    margin: 60px 0 80px;
}

#promo-soon > h2 {
    font-size: 60px;
    font-weight: 800;
}

#promo-soon > p {
    font-size: 30px;
}

.promo-form {
    border-radius: 25px;
    padding: 50px;
    -webkit-box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.4);
    -moz-box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.4);
    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.4);
}

.promo-form > h4 {
    font-size: 32px;
    text-align: center;
    margin: 0 0 20px;
}

.promo-form > form {
    text-align: center;
}

.promo-form > form > label {
    font-size: 18px;
    text-align: left;
}

.promo-form > form > input {
    height: 44px;
    padding: 0 15px;
}

.promo-form > form > input:focus {
    background: #000;
    color: #fff;
}

.promo-form > form > .button {
    font-size: 20px;
    margin-top: 15px;
}

#promo-bottom {
    text-align: center;
    margin: 110px 0;
    font-size: 32px;
}

#bg-slide {
    position: absolute;
    width: 100%;
    height: 100vw;
    overflow: hidden;
    z-index: -1;
}

#bg-slide > img {
    width: 100%;
    position: absolute;
    top: -7vw;
    left: 100%;
    transition: left 1.2s;
}

#bg-slide > img:nth-child(2) {
    left: 0;
}

#bg-slide > img:first-of-type {
    left: -100%;
}

#landing-page-top {
    text-align: center;
    margin: 10vw 0 24vw;
}

#landing-page-top > img {
    width: 15%;
}

#landing-page-top > h1 {
    font-weight: bold;
    color: #fff;
    font-size: 30px;
    margin: 2vw 0 5px;
}

#landing-page-top > p {
    color: #fff;
    font-size: 18px;
}

.loc-autocomplete {
    background: #fff;
    width: 440px;
    list-style: none;
    padding: 5px 0;
    border: 1px solid rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    z-index: 1001;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
}

.loc-autocomplete > .ui-menu-item {
    cursor: pointer;
    padding: 0 20px;
}

.loc-autocomplete > .ui-menu-item:hover {
    background: #eee;
}

#landing-page-top.srp {
    margin: 100px 0 0;
}

#landing-page-search.srp {
    margin: 0;
    width: 100%;
    -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.3);
    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.3);
}

#landing-page-search.srp:hover,
#landing-page-search.srp.focus {
    -webkit-box-shadow: 0 1px 7px 0 rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 1px 7px 0 rgba(0, 0, 0, 0.3);
    box-shadow: 0 1px 7px 0 rgba(0, 0, 0, 0.3);
}

#result-filter {
    padding: 25px 0;
    border-bottom: 1px solid #eee;
}

#result-filter > div {
    cursor: pointer;
}

#result-filter > div,
#result-filter > div > div {
    display: inline-block;
}

#result-view {
    text-align: center;
    padding: 15px 0;
    font-size: 0;
    margin-top: 45px;
    margin-bottom: 25px;
}

#result-view > .fa {
    color: #ccc;
    font-size: 24px;
    display: inline-block;
    margin: 0 8px;
    cursor: pointer;
}

#result-view > .fa.active {
    color: #707070;
}

#result-view > .fa:hover {
    color: #333;
}

#result {
    font-size: 0;
    margin: 0 -10px;
    line-height: 0;
}
/* ... */

